force-app/main/default/objects/Contract/fields/Active_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Active_ARR_USD__c</fullName>
    <description>Active ARR USD amount from all active related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Active ARR in USD calculated from active Assets only. Automatically updates when Asset ARR values change. Displays as $123,456.78 format.</inlineHelpText>
    <label>Active ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>