force-app/main/default/objects/Contract/fields/ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>ACV_USD__c</fullName>
    <description>Annual Contract Value in USD calculated from related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Annual Contract Value in USD calculated from related Asset ARR USD amounts. Populated automatically via Flow/Apex rollup logic. Displays as $123,456.78 format.</inlineHelpText>
    <label>ACV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>