force-app/main/default/objects/Contract/fields/ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>ARR_USD__c</fullName>
    <description>Sum of ARR USD amounts from all related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Total ARR in USD calculated by summing all related Asset ARR USD amounts. Automatically updates when Asset ARR values change. Displays as $123,456.78 format.</inlineHelpText>
    <label>ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>