force-app/main/default/objects/Contract/fields/Incremental_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR_USD__c</fullName>
    <description>Incremental ARR USD amount from related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Incremental ARR in USD calculated from related Assets. Automatically updates when Asset ARR values change. Displays as $123,456.78 format.</inlineHelpText>
    <label>Incremental ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>