force-app/main/default/objects/Contract/fields/Initial_ACV__c.field-meta.xml
<CustomField>
    <fullName>Initial_ACV__c</fullName>
    <description>Annual Contract Value at creation - locked baseline for multi-year tracking.</description>
    <label>Initial ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>