force-app/main/default/objects/Contract/fields/Initial_ARR__c.field-meta.xml
<CustomField>
    <fullName>Initial_ARR__c</fullName>
    <description>Annual Recurring Revenue at contract creation - locked value for multi-year tracking. Excludes Professional Services.</description>
    <label>Initial ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>