force-app/main/default/objects/Contract/fields/Initial_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Initial_ARR_USD__c</fullName>
    <description>Initial ARR USD amount - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Initial ARR in USD for tracking original contract ARR. Displays as $123,456.78 format.</inlineHelpText>
    <label>Initial ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>