force-app/main/default/objects/Contract/fields/Initial_ARR_USD_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Initial_ARR_USD_Reporting__c</fullName>
    <description>USD value in Number format for SFDC reporting and aggregation</description>
    <inlineHelpText>This field contains the same USD value as Initial ARR USD but in Number format to enable Salesforce reporting, rollups, and calculations.</inlineHelpText>
    <label>Initial ARR (Reporting)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>