force-app/main/default/objects/Contract/fields/Initial_MRR__c.field-meta.xml
<CustomField>
    <fullName>Initial_MRR__c</fullName>
    <description>Monthly Recurring Revenue at creation - locked baseline for multi-year tracking. Excludes Professional Services.</description>
    <label>Initial MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>