force-app/main/default/objects/Contract/fields/Initial_MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>Initial_MRR_USD__c</fullName>
    <description>Initial MRR USD amount - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Initial MRR in USD for tracking original contract MRR. Displays as $123,456.78 format.</inlineHelpText>
    <label>Initial MRR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>