force-app/main/default/objects/Contract/fields/Initial_TCV__c.field-meta.xml
<CustomField>
    <fullName>Initial_TCV__c</fullName>
    <description>Total Contract Value at creation - locked baseline for multi-year tracking. Includes Professional Services.</description>
    <label>Initial TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>