force-app/main/default/objects/Contract/fields/Initial_TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>Initial_TCV_USD__c</fullName>
    <description>Initial Total Contract Value in USD - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Initial TCV in USD for tracking original contract value. Displays as $123,456.78 format.</inlineHelpText>
    <label>Initial TCV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>