force-app/main/default/objects/Contract/fields/MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>MRR_USD__c</fullName>
    <description>Sum of MRR USD amounts from all related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Total MRR in USD calculated by summing all related Asset MRR USD amounts. Automatically updates when Asset MRR values change. Displays as $123,456.78 format.</inlineHelpText>
    <label>MRR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>