force-app/main/default/objects/Contract/fields/Previous_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_ARR_USD__c</fullName>
    <description>Previous ARR USD amount for tracking contract ARR changes - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous ARR in USD for tracking contract ARR history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>