force-app/main/default/objects/Contract/fields/Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the previous contract for renewal/change order tracking</description>
    <label>Previous Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Successor Contracts</relationshipLabel>
    <relationshipName>Previous_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>