force-app/main/default/objects/Contract/fields/Previous_MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_MRR_USD__c</fullName>
    <description>Previous MRR USD amount for tracking contract MRR changes - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous MRR in USD for tracking contract MRR history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous MRR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>