force-app/main/default/objects/Contract/fields/Previous_TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_TCV_USD__c</fullName>
    <description>Previous TCV USD amount for tracking contract value changes - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous TCV in USD for tracking contract value history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous TCV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>