force-app/main/default/objects/Contract/fields/TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>TCV_USD__c</fullName>
    <description>Sum of Total Value USD amounts from all related Assets - provides multi-currency Contract reporting in USD regardless of individual Asset currencies (Text format for proper $ display)</description>
    <inlineHelpText>Total Contract Value in USD calculated by summing all related Asset Total Value USD amounts. Automatically updates when Asset total values change. Displays as $123,456.78 format.</inlineHelpText>
    <label>TCV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>