force-app/main/default/objects/Contract/fields/Term_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Months__c</fullName>
    <label>Term Length (Months)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>